# Care-Connect

./: .gitignore  container_installations.txt  docker-compose.yml
backend_services/: .env.example  .gitignore  (+1 more)
backend_services/ai_services/chat_service/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  test.py
backend_services/ai_services/chat_service/alembic/: env.py
backend_services/ai_services/chat_service/alembic/versions/: 542a22ef3f99_enable_pgvector_extension.py  cd82db98bb6a_define_the_chat_session.py  f3a9b1c7d820_create_chat_message_table.py
backend_services/ai_services/chat_service/src/: config.py
backend_services/ai_services/chat_service/src/models/: __init__.py  base.py  chat_message.py  chat_session.py
backend_services/ai_services/chat_service/src/prompts/: __init__.py  chat_prompt.py  title_prompt.py
backend_services/ai_services/chat_service/src/repositories/: __init__.py  chat_message_repository.py  chat_session_repository.py
backend_services/ai_services/chat_service/src/routes/: __init__.py  chat_route.py
backend_services/ai_services/chat_service/src/schemas/: __init__.py  chat_schema.py
backend_services/ai_services/chat_service/src/services/: chat_service.py
backend_services/ai_services/summerization_service/: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  main.py  pyproject.toml
backend_services/ai_services/summerization_service/alembic/: env.py
backend_services/ai_services/summerization_service/src/: config.py
(+278 files in other folders)
