[project]
name = "chat-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.2",
    "langchain>=1.2.13",
    "langchain-google-genai>=4.2.1",
    "langchain-mistralai>=1.1.2",
    "langgraph>=1.1.3",
    "postgres[binary]>=4.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.34.0",
]
